[workspace]
resolver = "2"
members = [
    "ebpf-memory-monitor",
    "ebpf-memory-monitor-common",
    "rlimit-monitor-ebpf",
    "peak-monitor-ebpf"
]
default-members = ["ebpf-memory-monitor", "ebpf-memory-monitor-common"]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
anyhow = { version = "1.0.99", default-features = false }
nix = { version = "0.30.1", features = ["resource", "feature"] }
which = { version = "8.0.0" }
libc = { version = "0.2.175", default-features = false }

[profile.release.package.rlimit-monitor-ebpf]
debug = 2
codegen-units = 1

[profile.release.package.peak-monitor-ebpf]
debug = 2
codegen-units = 1
