[package]
name = "rlimit-kprobe"
version = "0.1.0"
edition.workspace = true

[dependencies]
ebpf-memory-monitor-common = { path = "../ebpf-memory-monitor-common" }
ebpf-common = { path = "../ebpf-common" }
aya-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "rlimit-kprobe-bin"
path = "src/main.rs"
